<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="@dimen/margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom">

                <EditText android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name"
                    android:textSize="@dimen/text_size"
                    />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom">

                <EditText
                    android:textSize="@dimen/text_size"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom">

                <EditText
                    android:textSize="@dimen/text_size"
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:maxLength="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom">

                <EditText
                    android:textSize="@dimen/text_size"
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:hint="@string/dob"
                    android:inputType="number"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:maxLength="10" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/genderm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/genderf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:layout_weight="1"
                        android:text="@string/female" />
                </RadioGroup>

            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size"
                    />

            </android.support.design.widget.TextInputLayout>

             <Button
                android:textSize="@dimen/text_size"
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:editable="false"
                android:focusable="false"
                android:padding="@dimen/padding"
                android:textAllCaps="false"
                />

            <Button
                android:textSize="@dimen/text_size"
                android:id="@+id/bnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:editable="false"
                android:focusable="false"
                android:padding="@dimen/padding"
                android:textAllCaps="false"
                />


            <Button
                android:textSize="@dimen/text_size"
                android:id="@+id/bnupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update"
                android:editable="false"
                android:focusable="false"
                android:padding="@dimen/padding"
                android:textAllCaps="false"
                android:visibility="gone"
                />


        </LinearLayout>
    </ScrollView>


</LinearLayout>